# ChangeLog for sys-fs/udisks
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/udisks/ChangeLog,v 1.87 2012/06/02 12:14:30 blueness Exp $

  02 Jun 2012; Anthony G. Basile <blueness@gentoo.org> udisks-1.0.4-r2.ebuild:
  Keyword ~mips

  19 May 2012; Anthony G. Basile <blueness@gentoo.org> udisks-1.97.0-r1.ebuild:
  Keyword ~mips

  17 May 2012; Samuli Suominen <ssuominen@gentoo.org> udisks-1.97.0-r1.ebuild:
  Check for CONFIG_SWAP wrt http://forums.gentoo.org/viewtopic-t-923640.html by
  "Fran"

  15 May 2012; Samuli Suominen <ssuominen@gentoo.org> -udisks-1.97.0.ebuild:
  old

*udisks-1.97.0-r1 (15 May 2012)

  15 May 2012; Samuli Suominen <ssuominen@gentoo.org> +udisks-1.97.0-r1.ebuild:
  Revision bump for last change to ensure /run is in place. Warn the user if 
  /run is not mounted with tmpfs wrt #415987

  15 May 2012; Samuli Suominen <ssuominen@gentoo.org> udisks-1.97.0.ebuild:
  Keyword ~ppc/~ppc64 wrt #412801

  15 May 2012; Samuli Suominen <ssuominen@gentoo.org> -udisks-1.94.0.ebuild,
  -udisks-1.96.0.ebuild:
  old

  15 May 2012; Samuli Suominen <ssuominen@gentoo.org> udisks-1.97.0.ebuild:
  Remove keepdir for /media and create /run if it's missing for
  /run/media/$user support wrt #415987

  13 May 2012; Samuli Suominen <ssuominen@gentoo.org> udisks-1.94.0.ebuild,
  udisks-1.96.0.ebuild, udisks-1.97.0.ebuild:
  Force at least >=sys-kernel/linux-headers-3.1 for linux/loop.h to gain
  #define LOOP_CTL_GET_FREE wrt #415715 by Thomas Sachau

*udisks-1.97.0 (11 May 2012)

  11 May 2012; Samuli Suominen <ssuominen@gentoo.org> +udisks-1.97.0.ebuild:
  Version bump.

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> udisks-1.0.4-r1.ebuild,
  udisks-1.0.4-r2.ebuild, udisks-1.94.0.ebuild, udisks-1.96.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  01 May 2012; Samuli Suominen <ssuominen@gentoo.org> -udisks-1.94.0-r1.ebuild:
  old

*udisks-1.96.0 (01 May 2012)
