@@ -1,19 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 AUX udisks-1.0.2-ntfs-3g.patch 198 RMD160 e4b5cb3386184edf90bce5140a1c414ef5e99210 SHA1 d3ee3999b9d0437a6022d85d4535fc72632f6258 SHA256 1db923f52619c2dcc6c30ffedcd47dedce048dbec2eb781088738e51f8dc0539
 AUX udisks-2.x-ntfs-3g.patch 147 RMD160 6e81c4e0d1f8935b8db63fae2a51ec6b92a1cc37 SHA1 d827c4bdb80b41dec8a571c02468634042bad6c3 SHA256 62891ef17a4ee404e6d827ee38f8c2d8115fc8a847ef2ba842118c81b779ffad
 DIST udisks-1.0.4.tar.gz 719889 RMD160 163a8046fcc7f30d48b8272859ab0d09a88f179a SHA1 10d2acfd6e6ff4c8d9d962af1fb1856a885e3219 SHA256 854b89368733b9c3a577101b761ad5397ae75a05110c8698ac5b29de9a8bf8f5
 DIST udisks-1.97.0.tar.bz2 634652 RMD160 6f5d6c1d76904704ac0372053b1e540c78ed699f SHA1 3b99b4203168f8035ad6a373d6eedcbf17f984ff SHA256 132e569d1b565a74c481d37ba27977c9aa9f5254baf79b2763898c9fa35a4ceb
-EBUILD udisks-1.0.4-r1.ebuild 2028 RMD160 43fe80af5b1073d85b79872e00ad61fffbc3621f SHA1 0857123f564146cebe66157e63f7014a5ee92ac0 SHA256 27458a036712e836cb7cc2b4c3b8fab121d1f578674345338c660e8484f91db4
-EBUILD udisks-1.0.4-r2.ebuild 2323 RMD160 55e787040939bc124f536b51f073e77b3bd7d1cb SHA1 ed8cddf41e812f0b63d5238c7deeeb6162310301 SHA256 3d7b658bd7600bf6e994774e129157be6ce5432e41fceae566a1891a072d582b
-EBUILD udisks-1.97.0-r1.ebuild 2886 RMD160 0c6cfae369e5b9be0d3c7ebdd95bf4349604e981 SHA1 c82dac70f614b854ceac37ce70e14dc0563779f0 SHA256 da35d08dae2ad414c88a15ff0fd21b3a0e69d6f768bde43e8d71c99fb491403f
-MISC ChangeLog 12393 RMD160 f01c38f6a7bb55b2f894d8f0d2e74a3b6c29ec62 SHA1 343ed4c8a8964b8f260406c60f88b0174cf1da8e SHA256 4b35d819128c7bffb706fb9215e6b05a54198e75ee154296e931c1329b32fa0c
+EBUILD udisks-1.0.4-r1.ebuild 2038 RMD160 c6efa60fc4ac11c98f4016f3b6775c9f0fa2a2d3 SHA1 995fbb186d56d127f43e1eeb9f985b0b84e35d6d SHA256 d2968704f26a5ddba6a9fa03e924ac0d757a2516934dcd249fae7939e525af49
+EBUILD udisks-1.0.4-r2.ebuild 2329 RMD160 cb6a891f74223d71500f772cba605ad94a77cd92 SHA1 9836307385895b2c903ce7182c0937f554bda58d SHA256 6909842226c07ed129711503beb012304e13bb9ecf1efc5c86447530d71383a5
+EBUILD udisks-1.97.0-r1.ebuild 2892 RMD160 d409d83efaceaa5e981ac6639d9f15966873a81b SHA1 51d8320ccbf5d31047558029ea42eb584db9569c SHA256 64ba73ea14eb890ddc0352d3938c9c95cc89c8acdced57483acf155ad5af0171
+MISC ChangeLog 12594 RMD160 d9f847bc8afceb4439b94bc0786fc23781efc349 SHA1 ea9beb0b551fbd83655a9d15fe09923aeaeb5bdd SHA256 db335d0c2de535514fe5db636cf62729a5a859d18c33159fc46ce4fbfe10043e
 MISC metadata.xml 673 RMD160 b0a03a9802cae622d53d384ae8ad7836895746b9 SHA1 cad9804f14804e9ec0aa9beec37fcbee1442b011 SHA256 17e74f564943ba8dc4c7fcb8950755cf0cecdd88c9ab0fe7485ef2a363000f8c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAk/KA7EACgkQl5yvQNBFVTXBJwCfUq1xVpyGBJMzz51x2hW8MtWS
-Y94AoI3PnqrtB+GbY8izT6pW/E2UFQ8b
-=cf7S
+iQEcBAEBAgAGBQJP0HGlAAoJEEdUh39IaPFNbGwH/RVnS8eg3Sz70mFT/Q5IIKBa
+2XdMCkq8pCyxkO2nPLDR0b+qxCwqVzMmY9/iT/UxuvE7WDqVl08qpNokZQBrd20L
+aaKT4ukpFmJIMY+ilnBzgj4xhuPYBWiW8M1m6fXbZCQI7qs9skw10OdfWMOTZijo
+MNesZJA5J2BWfLEMRbNsggVtTm2tVYsA8EANGXSxXsWEXkvDTGbt7yhnyOpn/wWV
+r8OCb6rF6Fo/SrNEkTF7BY2dwXr8xKyrRUd7GLuXHVy+Y3Y+hundSwC1wFAUdZul
+vgJr88isqMmIKaIDVKgKT05WO9WrMnKsolF86y9X4uFolPnlfH7ctuw3S2aoLdw=
+=4Xb/
 -----END PGP SIGNATURE-----
